Reduced hydro to 40KW. Added Diesel imports in technology. Now Diesel Generator is seen in the profile

--- a/1.1. Current Scenario 2.0/2. Code/Model.ipynb
+++ b/1.1. Current Scenario 2.0/2. Code/Model.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
     "#The objective is to minimize the total costs of the system\n",
     "\n",
     "def obj_function(EM): \n",
-    "    return pyo.summation(EM.TotalCost) +pyo.summation(EM.TotalStorageCost)+pyo.summation(EM.InfeasibleGeneration)*999\n",
+    "    return pyo.summation(EM.TotalCost) +pyo.summation(EM.TotalStorageCost) + pyo.summation(EM.InfeasibleGeneration)*999\n",
     "\n",
     "# create the objective object with the earlier created objective function\n",
     "EM.obj = pyo.Objective(rule=obj_function)\n"
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,8 +375,8 @@
     "EM.TotalCapacityStorageFunction = pyo.Constraint(EM.Storage, EM.Fuel, rule=totalstoragecapacity)\n",
     "EM.GridCapacityFunction = pyo.Constraint(EM.Hour, rule=gridcapacity)\n",
     "#EM.BatterySOCFunction = pyo.Constraint(EM.Storage, EM.Hour, EM.Fuel, rule=batterySOCfunction)\n",
-    "EM.TotalCapitalCostFunction = pyo.Constraint(EM.Technology, rule=totalcapitalcostfunction)\n",
-    "EM.TotalVariableCostFunction = pyo.Constraint(EM.Hour, EM.Technology, rule=totalvariablecostfunction)\n",
+    "#EM.TotalCapitalCostFunction = pyo.Constraint(EM.Technology, rule=totalcapitalcostfunction)\n",
+    "#EM.TotalVariableCostFunction = pyo.Constraint(EM.Hour, EM.Technology, rule=totalvariablecostfunction)\n",
     "EM.StorageMaximumCapacityConstraint = pyo.Constraint(EM.Storage, rule=storagemaxcapacityconstraint)\n"
    ]
   },
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,16 +406,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Problem': [{'Name': 'x262826', 'Lower bound': 10939784.13696881, 'Upper bound': 10939784.13696881, 'Number of objectives': 1, 'Number of constraints': 236546, 'Number of variables': 236546, 'Number of binary variables': 0, 'Number of integer variables': 0, 'Number of continuous variables': 236546, 'Number of nonzeros': 668563, 'Sense': 'minimize'}], 'Solver': [{'Status': 'ok', 'Return code': '0', 'Message': 'Model was solved to optimality (subject to tolerances), and an optimal solution is available.', 'Termination condition': 'optimal', 'Termination message': 'Model was solved to optimality (subject to tolerances), and an optimal solution is available.', 'Wall time': '0.8420000076293945', 'Error rc': 0, 'Time': 3.5486948490142822}], 'Solution': [OrderedDict([('number of solutions', 0), ('number of solutions displayed', 0)])]}"
+       "{'Problem': [{'Name': 'x262826', 'Lower bound': 10939784.13696881, 'Upper bound': 10939784.13696881, 'Number of objectives': 1, 'Number of constraints': 201502, 'Number of variables': 201502, 'Number of binary variables': 0, 'Number of integer variables': 0, 'Number of continuous variables': 201502, 'Number of nonzeros': 598475, 'Sense': 'minimize'}], 'Solver': [{'Status': 'ok', 'Return code': '0', 'Message': 'Model was solved to optimality (subject to tolerances), and an optimal solution is available.', 'Termination condition': 'optimal', 'Termination message': 'Model was solved to optimality (subject to tolerances), and an optimal solution is available.', 'Wall time': '0.7119998931884766', 'Error rc': 0, 'Time': 2.9086453914642334}], 'Solution': [OrderedDict([('number of solutions', 0), ('number of solutions displayed', 0)])]}"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
