Refined some inputs, added another constraint for storagevariable cost

--- a/3. Future Scenario/2. Code/Model.ipynb
+++ b/3. Future Scenario/2. Code/Model.ipynb
@@ -118,7 +118,7 @@
     "readin_outputratio = pd.read_csv('../1. Input/outputratio.csv', index_col=[0,1], sep=',').squeeze('columns')\n",
     "readin_emissionratio = pd.read_csv('../1. Input/emissionratio.csv', index_col=[0], sep=',').squeeze('columns')\n",
     "readin_maxcapacity = pd.read_csv('../1. Input/maxcapacity.csv', index_col=[0,1], sep=',').squeeze('columns')\n",
-    "readin_capacityfactor = pd.read_csv('../1. Input/capacity_factors_2018.csv', index_col=[0,1], sep=',').squeeze('columns')\n",
+    "readin_capacityfactor = pd.read_csv('../1. Input/capacity_factors.csv', index_col=[0,1], sep=',').squeeze('columns')\n",
     "readin_tagdispatchabletechnology = pd.read_csv('../1. Input/tagdispatchabletechnology.csv', index_col=[0], sep=',').squeeze('columns')\n",
     "readin_investmentcost = pd.read_csv('../1. Input/investmentcost.csv', index_col=[0], sep=',').squeeze('columns')\n",
     "readin_residualcapacity = pd.read_csv('../1. Input/residualcapacity.csv', index_col=[0], sep=',').squeeze('columns')\n",
@@ -139,7 +139,8 @@
     "readin_investmentcoststorage = pd.read_csv('../1. Input//investmentcoststorage.csv', index_col=[0], sep=',').squeeze('columns')\n",
     "readin_residualcapacitystorage = pd.read_csv('../1. Input/residualcapacitystorage.csv', index_col=[0,1], sep=',').squeeze('columns')\n",
     "readin_storagelifetime = pd.read_csv('../1. Input/storagelifetime.csv', index_col=[0], sep=',').squeeze('columns')\n",
-    "readin_installedstorageyear = pd.read_csv('../1. Input/installedstorageyear.csv', index_col=[0], sep=',').squeeze('columns') \n",
+    "readin_installedstorageyear = pd.read_csv('../1. Input/installedstorageyear.csv', index_col=[0], sep=',').squeeze('columns')\n",
+    "readin_storagevariablecost = pd.read_csv('../1. Input/storagevariablecost.csv', index=[0], sep=',').squeeze('columns')\n",
     "\n",
     "#reading the csv for annual emission budget\n",
     "readin_annualemissionlimit = pd.read_csv('../1. Input/annualemissionlimit.csv', index_col=[0], sep=',').squeeze('columns')\n",
@@ -150,13 +151,13 @@
     "EM.OutputRatio = pyo.Param(EM.Technology, EM.Fuel, default=0, initialize=readin_outputratio)\n",
     "EM.InputRatio = pyo.Param(EM.Technology, EM.Fuel, default=0 , initialize=readin_inputratio)\n",
     "EM.EmissionRatio = pyo.Param(EM.Technology, default=0, initialize=readin_emissionratio)\n",
-    "EM.MaxCapacity = pyo.Param(EM.Year, EM.Technology, default=999999, initialize=readin_maxcapacity)\n",
+    "EM.MaxCapacity = pyo.Param(EM.Year, EM.Technology, default=float('inf'), initialize=readin_maxcapacity)\n",
     "EM.CapacityFactor = pyo.Param(EM.Technology, EM.Hour, default=0, initialize=readin_capacityfactor, mutable=True)\n",
     "EM.TagDispatchableTechnology = pyo.Param(EM.Technology, default=1, initialize=readin_tagdispatchabletechnology)\n",
     "EM.CapitalCost = pyo.Param(EM.Technology, default=0, initialize=readin_investmentcost)\n",
     "EM.ResidualCapacity = pyo.Param(EM.Technology,default=0,initialize=readin_residualcapacity)\n",
     "EM.TagGridTechnology = pyo.Param(EM.Technology, default=0,initialize=readin_taggridtechnology)\n",
-    "EM.TechnologyLifetime = pyo.Param(EM.Technology, default=20, initialize=readin_technologylifetime)\n",
+    "EM.TechnologyLifetime = pyo.Param(EM.Technology, default=25, initialize=readin_technologylifetime)\n",
     "EM.TechnologyMinCapacity = pyo.Param(EM.Technology, default = 1, initialize=readin_technologymincapacity)\n",
     "EM.TechnologyInstallationYear = pyo.Param(EM.Technology, default=2025, initialize=readin_installedtechnologyyear)\n",
     "\n",
@@ -166,17 +167,18 @@
     "\n",
     "#for storage\n",
     "EM.E2PRatio = pyo.Param(EM.Storage, default=0, initialize=readin_e2pratio)\n",
-    "EM.StorageChargeEfficiency = pyo.Param(EM.Storage, EM.Fuel, default=0, initialize=readin_storagechargeefficiency)\n",
-    "EM.StorageDisChargeEfficiency = pyo.Param(EM.Storage, EM.Fuel, default=0, initialize=readin_storagedischargeefficiency)\n",
-    "EM.MaxStorageCapacity = pyo.Param(EM.Year,EM.Storage, default=999999, initialize=readin_maxstoragecapacity)\n",
+    "EM.StorageChargeEfficiency = pyo.Param(EM.Storage, EM.Fuel, default=1, initialize=readin_storagechargeefficiency)\n",
+    "EM.StorageDisChargeEfficiency = pyo.Param(EM.Storage, EM.Fuel, default=1, initialize=readin_storagedischargeefficiency)\n",
+    "EM.MaxStorageCapacity = pyo.Param(EM.Year,EM.Storage, default=float('inf'), initialize=readin_maxstoragecapacity)\n",
     "EM.InvestmentCostStorage = pyo.Param(EM.Storage, default=0, initialize=readin_investmentcoststorage)\n",
     "EM.ResidualCapacityStorage = pyo.Param(EM.Storage, EM.Fuel, default=0,initialize=readin_residualcapacitystorage)\n",
     "EM.StorageLifetime = pyo.Param(EM.Storage, default = 20, initialize= readin_storagelifetime)\n",
     "EM.StorageInstallationYear = pyo.Param(EM.Storage, default = 2025, initialize= readin_installedstorageyear)\n",
+    "EM.StorageVariableCost = pyo.Param(EM.Storage, default=0, initialize= readin_storagevariablecost)\n",
     "\n",
     "#for emissions\n",
-    "EM.AnnualEmissionLimit = pyo.Param(EM.Year, default=9999, initialize=readin_annualemissionlimit)\n",
-    "EM.ModelPeriodEmissionLimit = pyo.Param(initialize=999999999)\n",
+    "EM.AnnualEmissionLimit = pyo.Param(EM.Year, default=float('inf'), initialize=readin_annualemissionlimit)\n",
+    "EM.ModelPeriodEmissionLimit = pyo.Param(initialize=float('inf'))\n",
     "\n",
     "#for grid capacity\n",
     "EM.GridCapacity = pyo.Param(initialize = 1050)\n",
@@ -386,8 +388,8 @@
     "    \n",
     "def storagecostfunction(EM,s): \n",
     "        return (\n",
-    "            EM.TotalStorageCost[s] == sum(EM.NewStorageEnergyCapacity[y,s,f]*EM.InvestmentCostStorage[s] / (1+EM.DiscountRate)**(y-min(EM.Year)) for f in EM.Fuel for y in EM.Year)\n",
-    "        )\n",
+    "            EM.TotalStorageCost[s] == sum(EM.NewStorageEnergyCapacity[y,s,f]*EM.InvestmentCostStorage[s] / (1+EM.DiscountRate)**(y-min(EM.Year)) for f in EM.Fuel for y in EM.Year) \n",
+    "            + sum(EM.StorageCharge[y,h,s,f]/(1+EM.DiscountRate)**(y-min(EM.Year)) * EM.StorageVariableCost[s] * EM.YearlyDifferenceMultiplier[y] for f in EM.Fuel for h in EM.Hour for y in EM.Year))\n",
     "\n",
     "def storageannualbalancefunction(EM,y,s,f): \n",
     "    if EM.StorageDisChargeEfficiency[s,f] > 0:\n",
