Excluded model period emissions
Memory exceeded, have to simplify model

--- a/3. Future Scenario/2. Code/Model.ipynb
+++ b/3. Future Scenario/2. Code/Model.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
     "readin_residualcapacitystorage = pd.read_csv('../1. Input/residualcapacitystorage.csv', index_col=[0,1], sep=',').squeeze('columns')\n",
     "readin_storagelifetime = pd.read_csv('../1. Input/storagelifetime.csv', index_col=[0], sep=',').squeeze('columns')\n",
     "readin_installedstorageyear = pd.read_csv('../1. Input/installedstorageyear.csv', index_col=[0], sep=',').squeeze('columns')\n",
-    "readin_storagevariablecost = pd.read_csv('../1. Input/storagevariablecost.csv', index=[0], sep=',').squeeze('columns')\n",
+    "readin_storagevariablecost = pd.read_csv('../1. Input/storagevariablecost.csv', index_col=[0], sep=',').squeeze('columns')\n",
     "\n",
     "#reading the csv for annual emission budget\n",
     "readin_annualemissionlimit = pd.read_csv('../1. Input/annualemissionlimit.csv', index_col=[0], sep=',').squeeze('columns')\n",
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
     "EM.TotalStorageCost = pyo.Var(EM.Storage, domain=pyo.NonNegativeReals)\n",
     "#EM.TotalCapitalCost = pyo.Var(EM.Year, EM.Technology, domain=pyo.NonNegativeReals)\n",
     "#EM.TotalVariableCost =pyo.Var(EM.Year, EM.Hour, EM.Technology, domain=pyo.NonNegativeReals)\n",
-    "EM.ModelPeriodEmissions = pyo.Var(domain= pyo.NonNegativeReals)\n",
+    "#EM.ModelPeriodEmissions = pyo.Var(domain= pyo.NonNegativeReals)\n",
     "EM.SalvageValue = pyo.Var(EM.Year, EM.Technology, domain=pyo.NonNegativeReals)\n",
     "EM.CapacityUnits = pyo.Var(EM.Year, EM.Technology, domain=pyo.NonNegativeIntegers)\n",
     "#EM.BatteryChargeState = pyo.Var(EM.Hour, domain=pyo.NonNegativeIntegers)\n",
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +345,7 @@
     "        sum(EM.AnnualTechnologyEmissions[y,t] * EM.YearlyDifferenceMultiplier[y] for y in EM.Year for t in EM.Technology) == EM.ModelPeriodEmissions\n",
     "    )\n",
     "\n",
-    "def totalemissionlimit(EM):\n",
+    "#def totalemissionlimit(EM):\n",
     "    return (\n",
     "        EM.ModelPeriodEmissionLimit >= EM.ModelPeriodEmissions\n",
     "    )\n",
@@ -459,7 +459,7 @@
     "\n",
     "#for emissions\n",
     "EM.TotalEmissionsAccounting = pyo.Constraint(rule=totalemissionaccounting) \n",
-    "EM.TotalEmissionLimit = pyo.Constraint(rule=totalemissionlimit)\n",
+    "#EM.TotalEmissionLimit = pyo.Constraint(rule=totalemissionlimit)\n",
     "\n",
     "#for economics\n",
     "EM.SalvageValueAccountingEndOfLife = pyo.Constraint(EM.Year,EM.Technology,rule=salvagevalue_endoflife)\n",
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,20 +497,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Problem': [{'Name': 'x6938300', 'Lower bound': 20519947.809668116, 'Upper bound': 20519954.497757636, 'Number of objectives': 1, 'Number of constraints': 5291377, 'Number of variables': 5361500, 'Number of binary variables': 0, 'Number of integer variables': 44, 'Number of continuous variables': 5361456, 'Number of nonzeros': 15810249, 'Sense': 'minimize'}], 'Solver': [{'Status': 'ok', 'Return code': '0', 'Message': 'Model was solved to optimality (subject to tolerances), and an optimal solution is available.', 'Termination condition': 'optimal', 'Termination message': 'Model was solved to optimality (subject to tolerances), and an optimal solution is available.', 'Wall time': '3445.797999858856', 'Error rc': 0, 'Time': 3491.6523582935333}], 'Solution': [OrderedDict([('number of solutions', 0), ('number of solutions displayed', 0)])]}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#defining the solver here\n",
     "opt = pyo.SolverFactory('gurobi')\n",
@@ -528,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,28 +535,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "105000.0000000001\n",
-      "4565081.145966261\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "3.717914864864724e-12"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#extracting the data from the solution to export results\n",
     "\n",
@@ -638,37 +608,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.842170943040401e-14\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(max(instance.InfeasibleGeneration.extract_values().values()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\n#useful scrap\\nProductionByTechnology = pd.DataFrame(instance.FuelProductionByTechnology.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.FuelProductionByTechnology.extract_values().keys(), names=('Hour','Technology', 'Fuel')), columns=['Value']).reset_index()\\nCapacity = pd.DataFrame(instance.Capacity.extract_values().values(), index=(instance.Capacity.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()\\nDemand = pd.DataFrame(readin_demand * demandprofile *(-1), columns=['value']).reset_index().rename(columns={'fuel': 'Fuel', 'hour': 'Hour', 'value' : 'Value'})\\nUse = pd.DataFrame(instance.FuelUseByTechnology.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.FuelUseByTechnology.extract_values().keys(), names=('Hour','Technology', 'Fuel')), columns=['Value']).reset_index()\\nCurtailment = pd.DataFrame(instance.Curtailment.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.Curtailment.extract_values().keys(), names=('Hour','Fuel')), columns=['Value']).reset_index()\\nStorageLevel = pd.DataFrame(instance.StorageLevel.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.StorageLevel.extract_values().keys(), names=('Hour','Storage','Fuel')), columns=['Value']).reset_index().fillna(0)\\nTotalCapacity = pd.DataFrame(instance.TotalCapacity.extract_values().values(), index=(instance.TotalCapacity.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()\\nTotalStorageCapacity = (pd.DataFrame(instance.TotalStorageCapacity.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.TotalStorageCapacity.extract_values().keys(), names=('Storage', 'Fuel')), columns=['Value']).reset_index().dropna()).drop('Fuel', axis=1).reset_index()\\nGenerationCapacity = TotalCapacity.iloc[0:5,:]\\nTotalCapitalCost = (pd.DataFrame(instance.TotalCapitalCost.extract_values().values(), index=(instance.TotalCapitalCost.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()).iloc[0:5,:]\\nTotalVariableCost = pd.DataFrame(instance.TotalVariableCost.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.TotalVariableCost.extract_values().keys(), names=('Hour', 'Technology')), columns=['Value']).reset_index()\\nTotalStorageCost = pd.DataFrame(instance.TotalStorageCost.extract_values().values(), index=(instance.TotalStorageCost.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()\\nTotalProjectCapital = pd.concat([TotalCapitalCost, TotalStorageCost], ignore_index=True)\\nTechnologyEmissions = pd.DataFrame(instance.TechnologyEmissions.extract_values().values(), index=(instance.TechnologyEmissions.extract_values().keys()), columns=['Value']).rename_axis('Technology').reset_index()\\n\\n#let's add outputs for our storage flows\\nStorageCharge = pd.DataFrame(instance.StorageCharge.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.StorageCharge.extract_values().keys(), names=('Hour','Technology','Fuel')), columns=['Value']).reset_index().fillna(0)\\nStorageDisCharge = (pd.DataFrame(instance.StorageDisCharge.extract_values().values(), index=pd.MultiIndex.from_tuples(instance.StorageDisCharge.extract_values().keys(), names=('Hour','Technology','Fuel')), columns=['Value']).reset_index().fillna(0))\\n\\n# make sure that the values for Curtailment and Use are negative for our outputs\\nUse['Value']= Use['Value']*-1\\nCurtailment['Value']= Curtailment['Value']*-1\\nStorageCharge['Value']= StorageCharge['Value']*-1\\n\\n# combine all values for Production, Use, Demand, and Curtailment into one data frame\\nEnergyBalance = pd.concat([ProductionByTechnology,Use], ignore_index=True)\\nEnergyBalance = pd.concat([EnergyBalance,Demand], ignore_index=True)\\nEnergyBalance['Technology'] = EnergyBalance['Technology'].fillna('Demand')\\nEnergyBalance = pd.concat([EnergyBalance,Curtailment], ignore_index=True)\\nEnergyBalance['Technology'] = EnergyBalance['Technology'].fillna('Curtailment')\\nEnergyBalance = pd.concat([EnergyBalance,StorageCharge], ignore_index=True)\\nEnergyBalance = pd.concat([EnergyBalance,StorageDisCharge], ignore_index=True)\\n\\n# write our output values to csv files in the output subfolder\\nEnergyBalance.to_csv('../3. Output/EnergyBalance.csv',index=False)\\nCapacity.to_csv('../3. Output/Capacity.csv',index=False)\\nStorageLevel.to_csv('../3. Output/StorageLevel.csv',index=False)\\nTotalStorageCapacity.to_csv('../3. Output/TotalStorageCapacity.csv', index=False)\\nGenerationCapacity.to_csv('../3. Output/GenerationCapacity.csv', index=False)\\nTotalProjectCapital.to_csv('../3. Output/TotalProjectCapital.csv', index=False)\\nTotalVariableCost.to_csv('../3. Output/TotalVariableCost.csv', index=False)\\nTechnologyEmissions.to_csv('../3. Output/TechnologyEmissions.csv', index=False)\\n\\n#print(TotalCapacity)\\n#print(TotalStorageCapacity)\\n#print(GenerationCapacity)\\n#print(TotalCapitalCost)\\n#print(TotalProjectCapital)\\nprint(TechnologyEmissions)\\n\\n\""
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''\n",
     "#scrap yard\n",
