Rectified the error on emissionslimit

--- a/3. Future Scenario/2. Code/Model.ipynb
+++ b/3. Future Scenario/2. Code/Model.ipynb
@@ -178,7 +178,7 @@
     "\n",
     "#for emissions\n",
     "EM.AnnualEmissionLimit = pyo.Param(EM.Year, default=float('inf'), initialize=readin_annualemissionlimit)\n",
-    "EM.ModelPeriodEmissionLimit = pyo.Param(initialize=float('inf'))\n",
+    "#EM.ModelPeriodEmissionLimit = pyo.Param(initialize=float('inf'))\n",
     "\n",
     "#for grid capacity\n",
     "EM.GridCapacity = pyo.Param(initialize = 1050)\n",
@@ -236,7 +236,7 @@
     "EM.TotalStorageCost = pyo.Var(EM.Storage, domain=pyo.NonNegativeReals)\n",
     "#EM.TotalCapitalCost = pyo.Var(EM.Year, EM.Technology, domain=pyo.NonNegativeReals)\n",
     "#EM.TotalVariableCost =pyo.Var(EM.Year, EM.Hour, EM.Technology, domain=pyo.NonNegativeReals)\n",
-    "#EM.ModelPeriodEmissions = pyo.Var(domain= pyo.NonNegativeReals)\n",
+    "EM.ModelPeriodEmissions = pyo.Var(domain= pyo.NonNegativeReals)\n",
     "EM.SalvageValue = pyo.Var(EM.Year, EM.Technology, domain=pyo.NonNegativeReals)\n",
     "EM.CapacityUnits = pyo.Var(EM.Year, EM.Technology, domain=pyo.NonNegativeIntegers)\n",
     "#EM.BatteryChargeState = pyo.Var(EM.Hour, domain=pyo.NonNegativeIntegers)\n",
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
