Removed 2025 dimension from sets

--- a/3. Future Scenario/2. Code/Model.ipynb
+++ b/3. Future Scenario/2. Code/Model.ipynb
@@ -79,7 +79,7 @@
     "EM.Fuel = pyo.Set(initialize = fuel['fuel'])\n",
     "EM.Storage = pyo.Set(initialize = storage['storage'])\n",
     "EM.Hour = pyo.RangeSet(1,8760,1)\n",
-    "EM.Year = pyo.RangeSet(2025,2040,5)"
+    "EM.Year = pyo.RangeSet(2030,2040,5)"
    ]
   },
   {
@@ -236,7 +236,7 @@
     "EM.TotalStorageCost = pyo.Var(EM.Storage, domain=pyo.NonNegativeReals)\n",
     "#EM.TotalCapitalCost = pyo.Var(EM.Year, EM.Technology, domain=pyo.NonNegativeReals)\n",
     "#EM.TotalVariableCost =pyo.Var(EM.Year, EM.Hour, EM.Technology, domain=pyo.NonNegativeReals)\n",
-    "EM.ModelPeriodEmissions = pyo.Var(domain= pyo.NonNegativeReals)\n",
+    "#EM.ModelPeriodEmissions = pyo.Var(domain= pyo.NonNegativeReals)\n",
     "#EM.SalvageValue = pyo.Var(EM.Year, EM.Technology, domain=pyo.NonNegativeReals)\n",
     "EM.CapacityUnits = pyo.Var(EM.Year, EM.Technology, domain=pyo.NonNegativeIntegers)\n",
     "#EM.BatteryChargeState = pyo.Var(EM.Hour, domain=pyo.NonNegativeIntegers)\n",
@@ -262,7 +262,12 @@
     "\n",
     "def obj_function(EM): \n",
     "    return (pyo.summation(EM.TotalCost) + pyo.summation(EM.TotalStorageCost)\n",
+    "            )+pyo.summation(EM.InfeasibleGeneration)*999\n",
+    "\n",
+    "#def obj_function(EM): \n",
+    "    return (pyo.summation(EM.TotalCost) + pyo.summation(EM.TotalStorageCost)\n",
     "            -pyo.summation(EM.SalvageValue))+pyo.summation(EM.InfeasibleGeneration)*999\n",
+    "\n",
     "\n",
     "#creating the objective object with the earlier created objective function\n",
     "EM.obj = pyo.Objective(rule=obj_function)\n"
@@ -306,13 +311,7 @@
     "    if EM.TagDispatchableTechnology[t] > 0:\n",
     "        return EM.OutputRatio[t,f] * EM.TotalCapacity[y,t] * EM.CapacityFactor[t,h] >= EM.FuelProductionByTechnology[y,h,t,f]\n",
     "    else:\n",
-    "        return pyo.Constraint.Skip\n",
-    "\n",
-    "def productionfunction_variable(EM,y,h,t,f): \n",
-    "    if EM.TagDispatchableTechnology[t] == 0:\n",
     "        return EM.OutputRatio[t,f] * EM.TotalCapacity[y,t] * EM.CapacityFactor[t,h] == EM.FuelProductionByTechnology[y,h,t,f]\n",
-    "    else:\n",
-    "        return pyo.Constraint.Skip\n",
     "\n",
     "def usefunction(EM,y,h,t,f): \n",
     "    return EM.InputRatio[t,f] * sum(EM.FuelProductionByTechnology[y,h,t,ff] for ff in EM.Fuel) == EM.FuelUseByTechnology[y,h,t,f]\n",
@@ -434,7 +433,7 @@
     "EM.DemandAdequacy = pyo.Constraint(EM.Year,EM.Hour,EM.Fuel, rule=demand_adequacy)\n",
     "EM.ProductionCost = pyo.Constraint(EM.Technology, rule=productioncost)\n",
     "EM.ProductionFunction_disp = pyo.Constraint(EM.Year,EM.Hour,EM.Technology, EM.Fuel, rule=productionfunction_dispatchable)\n",
-    "EM.ProductionFunction_res = pyo.Constraint(EM.Year,EM.Hour,EM.Technology, EM.Fuel, rule=productionfunction_variable)\n",
+    "#EM.ProductionFunction_res = pyo.Constraint(EM.Year,EM.Hour,EM.Technology, EM.Fuel, rule=productionfunction_variable)\n",
     "EM.UseFunction = pyo.Constraint(EM.Year,EM.Hour,EM.Technology, EM.Fuel, rule=usefunction)\n",
     "EM.TechnologyEmissionFunction = pyo.Constraint(EM.Year,EM.Technology, rule=technologyemissionfunction)\n",
     "EM.AnnualEmissionLimitConstraint = pyo.Constraint(EM.Year, rule=annualemissionlimitconstraint)\n",
